# crypto

./: .gitignore  README.md  README.pt-br.md  TripleIndicator.html  TripleIndicator_Optimized.html  compartilhado.py  log.csv  main.py  main_bot.py  modelagem.ipynb  pyproject.toml  segredos.py
bot/: analizador_de_mercado.py  bot.py  historico_precos.py  parametros.py  validador_trade.py
bot/apis/: api_binance.py  api_bitpreco.py  api_bitpreco_websockets.py
bot/estrategias/: TripleIndicatoStrategy.py  daytrade.py
bot/indicadores/: calcular_indicadores.py  gerar_sinais_compra_venda.py  historico_precos.py
bot/logs/: config_log.py
bot/models/: coin_pair.py  models.py
bot/tests/: backtestRunner.py  backtest_ut_bot.py
crypto/: __init__.py  api_binance.py  api_bitpreco.py  api_bitpreco_websockets.py  balance.csv  bot.py  callbacks.py  compartilhado.py  componentes_personalizados.py  crypto_sim_rich.py  dash_utils.py  duckdb_csv.py  estrategias.py  graph_preco_tab.py  interval.json  log.csv  precos.ipynb  segredos.py  ticker.csv  timescaledb.py  views.py
crypto/db/: balance.csv  coinpair.json  executed_orders.csv  indicadores.csv  interval.json  log.csv  sinais.csv  ticker.csv  trade_history.json
dashboard/: __init__.py  callbacks.py  componentes_personalizados.py  custom_chart_editor.py  graph_preco_tab.py  routers.py  views.py
datasets/: saida_como_preco_do_ativo_BTC_BRL_bitpreco.csv
db/: coinpair.json  duckdb_csv.py  json_csv.py  timescaledb.py
examples/: change_datasets.py  customize.py  default_figure.py  display_dce_figure_code.py  display_dce_figure_in_dccGraph.py  dynamic_progress.py  figure_templates.py  figure_templates_dbc.py  live_progress.py  pattern_match_demo.py  quickstart.py  table_movie.py
scripts/: kill_process.py  process_manager.py
